# my-jarvis

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  code_audit_agent.py  context_agent.py  definitions.py  evolution_agent.py  execution_agent.py  idle_learning_agent.py  jarvis_crew.py  productivity_copilot_agent.py  registry.py  response_draft_agent.py  self_healing_agent.py  slack_intel_agent.py  twin_agent.py
apps/api/app/api/: routes_agents.py  routes_command.py  routes_evolution.py  routes_health.py  routes_memory.py  routes_models.py  routes_phase3.py  routes_phase5.py  routes_sibling_projects.py  routes_slack.py  routes_system.py
apps/api/app/automation/: __init__.py
apps/api/app/core/: automation_state.py  config.py  deps.py  logging.py  operator_takeover.py  screen_intel_state.py  version.py
apps/api/app/memory/: __init__.py  context_history_store.py  store.py
apps/api/app/schemas/: agents.py  automation.py  command.py  evolution.py  health.py  memory.py  models.py  phase5.py  sibling_projects.py  slack.py  system.py
apps/api/app/services/: __init__.py  action_log.py  app_context_service.py  autowork_scheduler.py  (+40 more)
apps/api/tests/: test_autowork.py  test_evolution_knowledge_phase81.py  test_evolution_phase8.py  test_evolution_safety_phase81.py  test_health.py  test_phase2.py  test_phase3.py  test_phase5.py  test_sibling_projects.py  test_slack_priority.py  test_slack_send_approval.py  test_system_phase6.py
(+69 files in other folders)
